1. optimize correlation MR job 2. add corrlation threshold in varsel